--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 									</table>
 								</div>
 								<div class="about_right">
-									<!-- Download CV Button -->
+									<!-- Download CV Button img/cv.jpg-->
 									<div class="resumo_fn_cv_btn">
-										<a href="img/cv.jpg" download>
+										<a href="file:///C:/Users/TOSHIBA/Downloads/My%20Resume.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
@@ -174,10 +174,10 @@
 												<li>
 													<div class="item">
 														<div class="item_top">
-															<h5>DTECK</h5>
+															<h5>Alxafrica</h5>
 															<span>( 2019 — 2020 )</span>
 														</div>
-														<h3>Mobile App  Engineer</h3>
+														<h3>Mobile App  Engineer Intern</h3>
 														<p>Developing application programming interfaces (APIs) to support mobile functionality. </p>
 													</div>
 												</li>
@@ -226,7 +226,7 @@
 												</li>
 												<li>
 													<div class="item">
-									0					<div class="item_top">
+														<div class="item_top">
 															<h5>Google</h5>
 															<span>( 2018 — 2019 )</span>
 														</div>
@@ -352,7 +352,7 @@
 											<img src="img/thumb/square.jpg" alt="">
 											<div class="abs_img" data-bg-img="img/portfolio/1.jpg"></div>
 										</div>
-										<p class="fn__desc">The story
+										<p class="fn__desc"><p>The story</p>
 											I’d like to tell the story and the way how we were thinking.
 											We started a research to get informed. What kind of solutions they provide? What is the main approach? What kind of feature set they have? As I mentioned we were testing Evernote and Slite mainly. While we were using these apps we realized the pain points.</p>
 										<p class="fn__desc">Tools Used: HTML, CSS , JAVASCRIPT, REACT </p>
