--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								<div class="about_right">
 									<!-- Download CV Button img/cv.jpg-->
 									<div class="resumo_fn_cv_btn">
-										<a href="file:///C:/Users/TOSHIBA/Downloads/My%20Resume.pdf" download>
+										<a href="img/cv.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
