--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								<div class="about_right">
 									<!-- Download CV Button img/cv.jpg-->
 									<div class="resumo_fn_cv_btn">
-										<a href="file:///C:/Users/TOSHIBA/Downloads/My%20Resume.pdf" download>
+										<a href="img/cv.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
@@ -175,7 +175,7 @@
 													<div class="item">
 														<div class="item_top">
 															<h5>Alxafrica</h5>
-															<span>( 2019 — 2020 )</span>
+															<span>( 2021 — 2022 )</span>
 														</div>
 														<h3>Mobile App  Engineer Intern</h3>
 														<p>Developing application programming interfaces (APIs) to support mobile functionality. </p>
@@ -185,7 +185,7 @@
 													<div class="item">
 														<div class="item_top">
 															<h5>Tracepresence</h5>
-															<span>( 2018 — 2019 )</span>
+															<span>( 2020 — 2021 )</span>
 														</div>
 														<h3>Front-end Developer</h3>
 														<p>Able to work remotely in building a responsive corporate website, with reusable code and user focused interface. </p>
@@ -194,11 +194,17 @@
 												<li>
 													<div class="item">
 														<div class="item_top">
-															<h5>Freelancing</h5>
-															<span>( 2017 — Present )</span>
+															<h5>Ingression</h5>
+															<span>( 2019 — 2020	 )</span>
 														</div>
-														<h3>Cross Platform Development</h3>
-														<p>Built variety of Applications and Websites for various companies and individuals </p>
+														<h3>Software Engineer Intern</h3>
+														<p>Worked with 5 other interns under the supervision of senior software engineer full stack development of
+															the e-commerce system
+															· Received coaching and support from peers and senior software engineer, and gained practical experience
+															in using Javascript and React
+															· Studied data structures to recommend changes in algorithms, which boosted online sales by 6%
+															· Partnered with interns,using code composition to redesign a clean APIthat offered increased flexibility
+															to third parties,which generated a revenue increase for the company </p>
 													</div>
 												</li>
 											</ul>
@@ -342,7 +348,7 @@
 									</div>
 									<div class="title_holder">
 										<p>Chrome extension, React</p>
-										<h3><a href="#">Leads Tracker
+										<h3><a href="www.obeezi.com">Leads Tracker
 										</a></h3>
 									</div>
 									<div class="fn__hidden">
@@ -353,10 +359,11 @@
 											<div class="abs_img" data-bg-img="img/portfolio/1.jpg"></div>
 										</div>
 										<p class="fn__desc"><p>The story</p>
-											I’d like to tell the story and the way how we were thinking.
-											We started a research to get informed. What kind of solutions they provide? What is the main approach? What kind of feature set they have? As I mentioned we were testing Evernote and Slite mainly. While we were using these apps we realized the pain points.</p>
+											Leads tracker app is a self motivated idea, It is used for storing leads from linkdn, twitter etc.
+											So while your chrome browser is open with this extension.It saves any person or leads url so you get to go back and track it.</p>
 										<p class="fn__desc">Tools Used: HTML, CSS , JAVASCRIPT, REACT </p>
-										<p class="fn__desc">Designing apps for enterprise environment need a bit different approach and mentality. Maybe there are a bit different user needs what we expect or what we think based on of our experiences. The challenge is, seeing the big picture and thinking in system. Never forget about what the app is supposed to do.</p>
+										<p class="fn__desc"><a href="https://github.com/LenyieDavid/leads-tracker"  target="_blank"><button>Demo</button></a></p>
+										
 									</div>
 								</div>
 								<div class="item modal_item" data-index="2">
@@ -366,18 +373,18 @@
 									</div>
 									<div class="title_holder">
 										<p>web, mobile, Javascript</p>
-										<h3><a href="#">Gym Website</a></h3>
+										<h3><a href="#">E-commerce Website</a></h3>
 									</div>
 									<div class="fn__hidden">
 										<p class="fn__cat">web, mobile, online</p>
-										<h3 class="fn__title">Delicious Fruit</h3>
+										<h3 class="fn__title">Obeezi Shop</h3>
 										<div class="img_holder">
 											<img src="img/thumb/square.jpg" alt="">
 											<div class="abs_img" data-bg-img="img/portfolio/2.jpg"></div>
 										</div>
-										<p class="fn__desc">Sed ornare tellus a odio bibendum, at tristique sapien malesuada. Proin sagittis maximus accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida quam sit amet elit varius tempor. Pellentesque purus eros, blandit eu mollis vel, commodo eget orci. Proin vel hendrerit ex. Vivamus ut ex at nunc consectetur efficitur ut quis est. Proin posuere orci eget vulputate fringilla. Curabitur placerat massa eget efficitur cursus. Sed sollicitudin rhoncus blandit. Nam accumsan vestibulum enim. Sed rutrum eu leo pellentesque lobortis. Integer ornare fringilla arcu, eu mattis risus convallis in.</p>
-										<p class="fn__desc">Quisque dui metus, eleifend at enim ac, imperdiet sagittis dolor. Vestibulum ipsum quam, feugiat non velit sit amet, pulvinar varius nisl. Mauris tristique, ipsum sit amet lacinia congue, mauris magna tempus nibh, in mollis eros enim a tortor. Morbi enim arcu, tristique vitae mi nec, hendrerit pharetra metus. Phasellus id feugiat purus. In vel elit eu lacus ultrices feugiat. Etiam at aliquet mi. Nunc sit amet libero sit amet lectus pellentesque sagittis. Curabitur blandit ante quis erat dapibus viverra. Maecenas consequat pulvinar pulvinar. Donec in aliquam arcu. Donec eu laoreet dolor. Ut nisi lectus, pulvinar ac mattis quis, pretium ac nulla. Morbi sed ligula ultrices, ornare mauris id, auctor arcu. Sed pellentesque ex sed erat faucibus, ultrices vehicula ex dapibus. Aenean venenatis metus eros, vel faucibus lorem porttitor eu.</p>
-										<p class="fn__desc">Sed porttitor augue erat, vitae convallis odio viverra id. In nec finibus elit. Nullam ac sodales nunc, vel sagittis elit. Ut condimentum ex ipsum, eu ornare odio aliquam eu. Ut iaculis eros quam, eu bibendum tellus convallis quis. Donec sapien risus, consequat ut magna nec, interdum porta nisl. Vivamus pulvinar hendrerit finibus. Nunc molestie lacinia risus, id mattis nunc euismod ac. Nam eu orci felis. Quisque ut elementum quam. Vivamus pulvinar nisi nunc, ut faucibus turpis tincidunt eget. Fusce nec ex quis odio laoreet consequat. Duis faucibus metus id feugiat sodales. Sed eu ligula eget quam ultricies tincidunt. Morbi sodales nunc ultrices justo pellentesque, ac mattis mi sagittis. Morbi ut consectetur neque.</p>
+										<p class="fn__desc">Using a combined set of tools listed below, a modern, responsive e-commerce site was created. Although the code of this site can't be shared as it was built for a business. You can check the site below</p>
+										<p class="fn__desc">Tools Used : Html, Css, JavaScript, PHP, Wordpress, React</p>
+										<p class="fn__desc"><a href="http://www.obeezi.com " target="_blank"><button>Live Demo</button></a></p>
 									</div>
 								</div>
 								<div class="item modal_item" data-index="3">
@@ -386,19 +393,19 @@
 										<div class="abs_img" data-bg-img="img/portfolio/3.jpg"></div>
 									</div>
 									<div class="title_holder">
-										<p>design, vector</p>
-										<h3><a href="#">Notes App</a></h3>
+										<p>Web app, design</p>
+										<h3><a href="#">Crypto Exchange </a></h3>
 									</div>
 									<div class="fn__hidden">
-										<p class="fn__cat">Web App, React</p>
-										<h3 class="fn__title">Blue Lemon</h3>
+										<p class="fn__cat">Web App, JS</p>
+										<h3 class="fn__title">Crypto Exchange</h3>
 										<div class="img_holder">
 											<img src="img/thumb/square.jpg" alt="">
 											<div class="abs_img" data-bg-img="img/portfolio/3.jpg"></div>
 										</div>
-										<p class="fn__desc">Sed ornare tellus a odio bibendum, at tristique sapien malesuada. Proin sagittis maximus accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida quam sit amet elit varius tempor. Pellentesque purus eros, blandit eu mollis vel, commodo eget orci. Proin vel hendrerit ex. Vivamus ut ex at nunc consectetur efficitur ut quis est. Proin posuere orci eget vulputate fringilla. Curabitur placerat massa eget efficitur cursus. Sed sollicitudin rhoncus blandit. Nam accumsan vestibulum enim. Sed rutrum eu leo pellentesque lobortis. Integer ornare fringilla arcu, eu mattis risus convallis in.</p>
-										<p class="fn__desc">Quisque dui metus, eleifend at enim ac, imperdiet sagittis dolor. Vestibulum ipsum quam, feugiat non velit sit amet, pulvinar varius nisl. Mauris tristique, ipsum sit amet lacinia congue, mauris magna tempus nibh, in mollis eros enim a tortor. Morbi enim arcu, tristique vitae mi nec, hendrerit pharetra metus. Phasellus id feugiat purus. In vel elit eu lacus ultrices feugiat. Etiam at aliquet mi. Nunc sit amet libero sit amet lectus pellentesque sagittis. Curabitur blandit ante quis erat dapibus viverra. Maecenas consequat pulvinar pulvinar. Donec in aliquam arcu. Donec eu laoreet dolor. Ut nisi lectus, pulvinar ac mattis quis, pretium ac nulla. Morbi sed ligula ultrices, ornare mauris id, auctor arcu. Sed pellentesque ex sed erat faucibus, ultrices vehicula ex dapibus. Aenean venenatis metus eros, vel faucibus lorem porttitor eu.</p>
-										<p class="fn__desc">Sed porttitor augue erat, vitae convallis odio viverra id. In nec finibus elit. Nullam ac sodales nunc, vel sagittis elit. Ut condimentum ex ipsum, eu ornare odio aliquam eu. Ut iaculis eros quam, eu bibendum tellus convallis quis. Donec sapien risus, consequat ut magna nec, interdum porta nisl. Vivamus pulvinar hendrerit finibus. Nunc molestie lacinia risus, id mattis nunc euismod ac. Nam eu orci felis. Quisque ut elementum quam. Vivamus pulvinar nisi nunc, ut faucibus turpis tincidunt eget. Fusce nec ex quis odio laoreet consequat. Duis faucibus metus id feugiat sodales. Sed eu ligula eget quam ultricies tincidunt. Morbi sodales nunc ultrices justo pellentesque, ac mattis mi sagittis. Morbi ut consectetur neque.</p>
+										<p class="fn__desc">Crypto Exchange Site with web 3 integrated features. </p>
+										<p class="fn__desc">Tools Used: JavaScript</p>
+										<p class="fn__desc"><a><button>Demo</button></a></p>
 									</div>
 								</div>
 								<div class="item modal_item" data-index="4">
@@ -412,14 +419,14 @@
 									</div>
 									<div class="fn__hidden">
 										<p class="fn__cat">mobile, React Native</p>
-										<h3 class="fn__title">Yellow Phone</h3>
+										<h3 class="fn__title">Weather App</h3>
 										<div class="img_holder">
 											<img src="img/thumb/square.jpg" alt="">
 											<div class="abs_img" data-bg-img="img/portfolio/4.jpg"></div>
 										</div>
-										<p class="fn__desc">Sed ornare tellus a odio bibendum, at tristique sapien malesuada. Proin sagittis maximus accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida quam sit amet elit varius tempor. Pellentesque purus eros, blandit eu mollis vel, commodo eget orci. Proin vel hendrerit ex. Vivamus ut ex at nunc consectetur efficitur ut quis est. Proin posuere orci eget vulputate fringilla. Curabitur placerat massa eget efficitur cursus. Sed sollicitudin rhoncus blandit. Nam accumsan vestibulum enim. Sed rutrum eu leo pellentesque lobortis. Integer ornare fringilla arcu, eu mattis risus convallis in.</p>
-										<p class="fn__desc">Quisque dui metus, eleifend at enim ac, imperdiet sagittis dolor. Vestibulum ipsum quam, feugiat non velit sit amet, pulvinar varius nisl. Mauris tristique, ipsum sit amet lacinia congue, mauris magna tempus nibh, in mollis eros enim a tortor. Morbi enim arcu, tristique vitae mi nec, hendrerit pharetra metus. Phasellus id feugiat purus. In vel elit eu lacus ultrices feugiat. Etiam at aliquet mi. Nunc sit amet libero sit amet lectus pellentesque sagittis. Curabitur blandit ante quis erat dapibus viverra. Maecenas consequat pulvinar pulvinar. Donec in aliquam arcu. Donec eu laoreet dolor. Ut nisi lectus, pulvinar ac mattis quis, pretium ac nulla. Morbi sed ligula ultrices, ornare mauris id, auctor arcu. Sed pellentesque ex sed erat faucibus, ultrices vehicula ex dapibus. Aenean venenatis metus eros, vel faucibus lorem porttitor eu.</p>
-										<p class="fn__desc">Sed porttitor augue erat, vitae convallis odio viverra id. In nec finibus elit. Nullam ac sodales nunc, vel sagittis elit. Ut condimentum ex ipsum, eu ornare odio aliquam eu. Ut iaculis eros quam, eu bibendum tellus convallis quis. Donec sapien risus, consequat ut magna nec, interdum porta nisl. Vivamus pulvinar hendrerit finibus. Nunc molestie lacinia risus, id mattis nunc euismod ac. Nam eu orci felis. Quisque ut elementum quam. Vivamus pulvinar nisi nunc, ut faucibus turpis tincidunt eget. Fusce nec ex quis odio laoreet consequat. Duis faucibus metus id feugiat sodales. Sed eu ligula eget quam ultricies tincidunt. Morbi sodales nunc ultrices justo pellentesque, ac mattis mi sagittis. Morbi ut consectetur neque.</p>
+										<p class="fn__desc">Clean weather app for IOS and Android with openweather.org API used to display current weather,  pressure, humidity, and more features  </p>
+										<p class="fn__desc">Tools Used : React Native, JavaScript. To run the app, download expo on your device and run yarn start command</p>
+										<p class="fn__desc"><a href="https://github.com/LenyieDavid/weather-app" target="_blank"></a><button>Demo</button></p>
 									</div>
 								</div>
 								<div class="item modal_item" data-index="5">
@@ -428,19 +435,19 @@
 										<div class="abs_img" data-bg-img="img/portfolio/5.jpg"></div>
 									</div>
 									<div class="title_holder">
-										<p>mobile, Flutter</p>
-										<h3><a href="#">Scan and Shop</a></h3>
+										<p>mobile, Cross Platform</p>
+										<h3><a href="#">Chat App</a></h3>
 									</div>
 									<div class="fn__hidden">
 										<p class="fn__cat">mobile, design</p>
-										<h3 class="fn__title">Ice Cream</h3>
+										<h3 class="fn__title">Chat App</h3>
 										<div class="img_holder">
 											<img src="img/thumb/square.jpg" alt="">
 											<div class="abs_img" data-bg-img="img/portfolio/5.jpg"></div>
 										</div>
-										<p class="fn__desc">Sed ornare tellus a odio bibendum, at tristique sapien malesuada. Proin sagittis maximus accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida quam sit amet elit varius tempor. Pellentesque purus eros, blandit eu mollis vel, commodo eget orci. Proin vel hendrerit ex. Vivamus ut ex at nunc consectetur efficitur ut quis est. Proin posuere orci eget vulputate fringilla. Curabitur placerat massa eget efficitur cursus. Sed sollicitudin rhoncus blandit. Nam accumsan vestibulum enim. Sed rutrum eu leo pellentesque lobortis. Integer ornare fringilla arcu, eu mattis risus convallis in.</p>
-										<p class="fn__desc">Quisque dui metus, eleifend at enim ac, imperdiet sagittis dolor. Vestibulum ipsum quam, feugiat non velit sit amet, pulvinar varius nisl. Mauris tristique, ipsum sit amet lacinia congue, mauris magna tempus nibh, in mollis eros enim a tortor. Morbi enim arcu, tristique vitae mi nec, hendrerit pharetra metus. Phasellus id feugiat purus. In vel elit eu lacus ultrices feugiat. Etiam at aliquet mi. Nunc sit amet libero sit amet lectus pellentesque sagittis. Curabitur blandit ante quis erat dapibus viverra. Maecenas consequat pulvinar pulvinar. Donec in aliquam arcu. Donec eu laoreet dolor. Ut nisi lectus, pulvinar ac mattis quis, pretium ac nulla. Morbi sed ligula ultrices, ornare mauris id, auctor arcu. Sed pellentesque ex sed erat faucibus, ultrices vehicula ex dapibus. Aenean venenatis metus eros, vel faucibus lorem porttitor eu.</p>
-										<p class="fn__desc">Sed porttitor augue erat, vitae convallis odio viverra id. In nec finibus elit. Nullam ac sodales nunc, vel sagittis elit. Ut condimentum ex ipsum, eu ornare odio aliquam eu. Ut iaculis eros quam, eu bibendum tellus convallis quis. Donec sapien risus, consequat ut magna nec, interdum porta nisl. Vivamus pulvinar hendrerit finibus. Nunc molestie lacinia risus, id mattis nunc euismod ac. Nam eu orci felis. Quisque ut elementum quam. Vivamus pulvinar nisi nunc, ut faucibus turpis tincidunt eget. Fusce nec ex quis odio laoreet consequat. Duis faucibus metus id feugiat sodales. Sed eu ligula eget quam ultricies tincidunt. Morbi sodales nunc ultrices justo pellentesque, ac mattis mi sagittis. Morbi ut consectetur neque.</p>
+										<p class="fn__desc">Simple yet minimal and clean chat app with firebase </p>
+										<p class="fn__desc">Tools Used: React Native, JavaScript. To run the app, download expo on your device and run yarn start command</p>
+										<p class="fn__desc"><a href="https://github.com/LenyieDavid/Chat-app" target="_blank"><button>Demo</button></a></p>
 									</div>
 								</div>
 							</div>
@@ -845,7 +852,7 @@
 									Don't remove below code in avoid to work contact form properly.
 									You can chance dat-success value with your one. It will be used when user will try to contact via contact form and will get success message.
 								-->
-								<div class="success" data-success="Your message has been received, we will contact you soon."></div>
+								<div class="success" dat-success="Your message has been received, we will contact you soon."></div>
 								<div class="empty_notice"><span>Please Fill Required Fields!</span></div>
 								<!-- -->
 
